@@ -60,6 +60,7 @@ DIRD(TokenMaxTTL,         "max lifetime of recent tokens", int, 60 * 5)
 DIRN(UserInfoURL,         "URL to user information service")
 DIRN(UserInfoPrincipal,   "authentication identity of the information service")
 DIRD(UserInfoTimeout,     "timeout for user information queries", int, 30)
+DIRN(UserInfoIgnoreFail,  "ignore failure to get user information")
 
 enum {
     E_Debug,
@@ -76,7 +77,8 @@ enum {
     E_TokenMaxTTL,
     E_UserInfoURL,
     E_UserInfoPrincipal,
-    E_UserInfoTimeout
+    E_UserInfoTimeout,
+    E_UserInfoIgnoreFail
 };
 
 /*
@@ -162,6 +164,7 @@ webkdc_config_merge(apr_pool_t *pool, void *basev, void *overv)
     MERGE_PTR(userinfo_config);
     MERGE_PTR(userinfo_principal);
     MERGE_SET(userinfo_timeout);
+    MERGE_SET(userinfo_ignore_fail);
     MERGE_SET(debug);
     MERGE_SET(keyring_auto_update);
     MERGE_SET(key_lifetime);
@@ -421,6 +424,10 @@ cfg_flag(cmd_parms *cmd, void *mconfig UNUSED, int flag)
     sconf = ap_get_module_config(cmd->server->module_config, &webkdc_module);
 
     switch (directive) {
+    case E_UserInfoIgnoreFail:
+        sconf->userinfo_ignore_fail = flag;
+        sconf->userinfo_ignore_fail_set = true;
+        break;
     case E_Debug:
         sconf->debug = flag;
         sconf->debug_set = 1;
@@ -461,5 +468,6 @@ const command_rec webkdc_cmds[] = {
     DIRECTIVE(AP_INIT_TAKE1,   cfg_str,   UserInfoURL),
     DIRECTIVE(AP_INIT_TAKE1,   cfg_str,   UserInfoPrincipal),
     DIRECTIVE(AP_INIT_TAKE1,   cfg_str,   UserInfoTimeout),
+    DIRECTIVE(AP_INIT_FLAG,    cfg_flag,  UserInfoIgnoreFail),
     { NULL, { NULL }, NULL, OR_NONE, RAW_ARGS, NULL }
 };
