@@ -2439,11 +2439,14 @@ handler_hook(request_rec *r)
         return DECLINED;
     }
     if (rc.sconf->userinfo_config != NULL) {
-        rc.sconf->userinfo_config->identity = rc.sconf->userinfo_principal;
-        rc.sconf->userinfo_config->timeout = rc.sconf->userinfo_timeout;
-        rc.sconf->userinfo_config->keytab = rc.sconf->keytab_path;
-        rc.sconf->userinfo_config->principal = rc.sconf->keytab_principal;
-        status = webauth_user_config(rc.ctx, rc.sconf->userinfo_config);
+        struct webauth_user_config *user = rc.sconf->userinfo_config;
+
+        user->identity       = rc.sconf->userinfo_principal;
+        user->timeout        = rc.sconf->userinfo_timeout;
+        user->ignore_failure = rc.sconf->userinfo_ignore_fail;
+        user->keytab         = rc.sconf->keytab_path;
+        user->principal      = rc.sconf->keytab_principal;
+        status = webauth_user_config(rc.ctx, user);
         if (status != WA_ERR_NONE) {
             ap_log_error(APLOG_MARK, APLOG_CRIT, 0, r->server,
                          "mod_webkdc: webauth_user_config failed: %s",
